  internal segment rendering, and partially/per-character-dimming-only via the dmddevice.dll interface), and opens up the path for emulation
  of strength modulated solenoids (for example most magnets, Capcom Kingpin, or the way most modern hardware handle Power/Hold and EOS switch).

*** CORE/CPU ***
Fixed WPC General Illumination (GI) Dimming (most noticably if more than one GI line is involved, also all 8 levels are now handled properly)
Reworked Capcom emulation & timings, allowing all tables to behave 'normally' (no more delay on Flipper Football, DMD's animation at the right speed,...)
Added Cosmic Flash sound emulation (Bell stole it from Bally's Squalk&Talk, but removed speech and DAC chips)
Improved Zaccaria 11178 sound emulation a little (clown, poolcham, bbeltzac, mexico, zankor, spooky)
Fixed Zaccaria strsphnx sound, background music works correctly now
Found a cleaner way to prevent garbled speech on Zaccaria
Used YMFM's YM2151 core for a more accurate emulation (GTS3, Older Bally/Williams WPCs, Older Data Easts)
Improved HC555XX CVSD sound emulation once more (most Williams/Bally machines in the Gorgar up to Twilight Zone range)
Distinguish between HC55516 and newer chip-variants (Sys6/7 now uses the older HC55516 chip)
Fixed regression in DCS Audio decoding
Also fixed one subtle DCS emulation bug that leads to slight buzzing/crackling on some samples though (mainly audible when using good speakers or headphones or if the internal volume is cranked up very high)
 one of the longest standing bugs in the history of PinMAME!
Due to the above, removed DCS low pass filtering (introduced in 2.8) again and prefer 1:1 DCS output quality
Refined Bally-32 sound emulation (so it also does not require the sample package s3250u3.zip anymore now)
Improved SP0250 and SP0256 sound emulation, most notably in Technoplays Scramble, and ManilaMatics Top Sound and Master